Content For Top Containers;

--- a/Assets/Quizzy/Quizzy_Icons_1.uxml
+++ b/Assets/Quizzy/Quizzy_Icons_1.uxml
@@ -1,2 +1,29 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <ui:VisualElement name="MainContainer" style="flex-grow: 1; background-image: resource(&apos;img/background&apos;);">
+        <ui:VisualElement name="UpperContainer" style="flex-basis: 20%; height: auto; flex-grow: 1; flex-direction: row; justify-content: space-between; align-items: center;">
+            <ui:VisualElement name="SeparatorLeft" style="width: 25%; height: 10px; color: rgba(0, 0, 0, 255); -unity-background-image-tint-color: rgba(0, 0, 0, 255); background-color: rgba(0, 0, 0, 255);" />
+            <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgba(0, 0, 0, 255); font-size: 120px; color: rgba(0, 0, 0, 255);" />
+            <ui:VisualElement name="SeparatorRight" style="width: 25%; height: 10px; -unity-background-image-tint-color: rgba(0, 0, 0, 255); background-color: rgba(0, 0, 0, 255);" />
+        </ui:VisualElement>
+        <ui:VisualElement name="MiddleContainer" style="flex-basis: 15%; flex-grow: 1; flex-direction: row; justify-content: center;">
+            <ui:VisualElement style="flex-direction: column; align-items: center;">
+                <ui:Label tabindex="-1" text="Question 1" display-tooltip-when-elided="true" name="QuestionCounter" style="font-size: 80px; color: rgba(0, 0, 0, 255); -unity-font-style: bold;" />
+                <ui:Label tabindex="-1" text="Your answer was correct" display-tooltip-when-elided="true" name="AnswerIndicator" style="font-size: 40px; color: rgba(0, 0, 0, 255);" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement name="LowerContainer" style="flex-grow: 1; flex-direction: row; flex-basis: 65%;">
+            <ui:VisualElement name="IconContainer" style="flex-basis: 100%; align-items: center; justify-content: center;">
+                <ui:VisualElement name="Scores" style="width: 70%;" />
+                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="AnswerContainer" style="flex-basis: 100%; width: auto; height: auto; justify-content: center; align-items: center;">
+                <ui:VisualElement name="AnswerBoard" style="width: 70%; height: 70%; justify-content: flex-start; align-items: stretch;">
+                    <ui:VisualElement name="TimeBar" style="flex-basis: 10%;" />
+                    <ui:VisualElement name="HintBar" style="flex-basis: 10%;" />
+                    <ui:VisualElement name="QuestionText" style="flex-basis: 30%;" />
+                    <ui:VisualElement name="DropContainer" style="flex-basis: 50%;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
+        </ui:VisualElement>
+    </ui:VisualElement>
 </ui:UXML>
