--- a/Assets/Quizzy/Quizzy_Icons_1.uxml
+++ b/Assets/Quizzy/Quizzy_Icons_1.uxml
@@ -1,27 +1,39 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="MainContainer" style="flex-grow: 1; background-image: resource(&apos;img/background&apos;);">
         <ui:VisualElement name="UpperContainer" style="flex-basis: 20%; height: auto; flex-grow: 1; flex-direction: row; justify-content: space-between; align-items: center;">
-            <ui:VisualElement name="SeparatorLeft" style="width: 25%; height: 10px; color: rgba(0, 0, 0, 255); -unity-background-image-tint-color: rgba(0, 0, 0, 255); background-color: rgba(0, 0, 0, 255);" />
-            <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgba(0, 0, 0, 255); font-size: 120px; color: rgba(0, 0, 0, 255);" />
-            <ui:VisualElement name="SeparatorRight" style="width: 25%; height: 10px; -unity-background-image-tint-color: rgba(0, 0, 0, 255); background-color: rgba(0, 0, 0, 255);" />
+            <ui:VisualElement name="SeparatorLeft" style="width: 25%; height: 10px; color: rgb(0, 0, 0); -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
+            <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgb(0, 0, 0); font-size: 120px; color: rgb(0, 0, 0);" />
+            <ui:VisualElement name="SeparatorRight" style="width: 25%; height: 10px; -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
         </ui:VisualElement>
         <ui:VisualElement name="MiddleContainer" style="flex-basis: 15%; flex-grow: 1; flex-direction: row; justify-content: center;">
             <ui:VisualElement style="flex-direction: column; align-items: center;">
-                <ui:Label tabindex="-1" text="Question 1" display-tooltip-when-elided="true" name="QuestionCounter" style="font-size: 80px; color: rgba(0, 0, 0, 255); -unity-font-style: bold;" />
-                <ui:Label tabindex="-1" text="Your answer was correct" display-tooltip-when-elided="true" name="AnswerIndicator" style="font-size: 40px; color: rgba(0, 0, 0, 255);" />
+                <ui:Label tabindex="-1" text="Question 1" display-tooltip-when-elided="true" name="QuestionCounter" style="font-size: 80px; color: rgb(0, 0, 0); -unity-font-style: bold;" />
+                <ui:Label tabindex="-1" text="Your answer was correct" display-tooltip-when-elided="true" name="AnswerIndicator" style="font-size: 40px; color: rgb(0, 0, 0);" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="LowerContainer" style="flex-grow: 1; flex-direction: row; flex-basis: 65%;">
             <ui:VisualElement name="IconContainer" style="flex-basis: 100%; align-items: center; justify-content: center;">
-                <ui:VisualElement name="Scores" style="width: 70%;" />
-                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%;" />
+                <ui:VisualElement name="Scores" style="width: 70%;">
+                    <ui:Label tabindex="-1" text="Score 123" display-tooltip-when-elided="true" style="font-size: 30px; color: rgb(0, 0, 0); align-items: stretch;" />
+                </ui:VisualElement>
+                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91);" />
             </ui:VisualElement>
             <ui:VisualElement name="AnswerContainer" style="flex-basis: 100%; width: auto; height: auto; justify-content: center; align-items: center;">
                 <ui:VisualElement name="AnswerBoard" style="width: 70%; height: 70%; justify-content: flex-start; align-items: stretch;">
-                    <ui:VisualElement name="TimeBar" style="flex-basis: 10%;" />
-                    <ui:VisualElement name="HintBar" style="flex-basis: 10%;" />
-                    <ui:VisualElement name="QuestionText" style="flex-basis: 30%;" />
-                    <ui:VisualElement name="DropContainer" style="flex-basis: 50%;" />
+                    <ui:VisualElement name="TimeBar" style="flex-basis: 10%;">
+                        <ui:Label tabindex="-1" text="30 sek" display-tooltip-when-elided="true" name="CounterLabel" enable-rich-text="true" style="font-size: 35px; color: rgb(183, 0, 0); -unity-font-style: bold;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="HintBar" style="flex-basis: 10%; flex-direction: row;">
+                        <ui:Label tabindex="-1" text="Hint 1:" display-tooltip-when-elided="true" name="HintNum" style="font-size: 35px; color: rgb(7, 7, 7); flex-grow: 1;" />
+                        <ui:Button text="NEXT HINT" display-tooltip-when-elided="true" name="NextHintButton" style="border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); font-size: 25px; background-color: rgb(0, 0, 0); padding-left: 10px; padding-right: 10px; padding-top: 4px; padding-bottom: 4px; flex-grow: 0;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="QuestionText" style="flex-basis: 30%; flex-grow: 1;">
+                        <ui:Label tabindex="-1" text="Stupid little Start Text" display-tooltip-when-elided="true" name="Hint" style="font-size: 40px; color: rgba(0, 0, 0, 255);" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="DropContainer" style="flex-basis: 50%; align-items: center; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgba(0, 0, 0, 255); border-right-color: rgba(0, 0, 0, 255); border-top-color: rgba(0, 0, 0, 255); border-bottom-color: rgba(0, 0, 0, 255);">
+                        <ui:VisualElement style="width: 35%; height: 60%; color: rgba(221, 0, 0, 255); background-color: rgba(226, 0, 0, 255); border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
+                        <ui:Label tabindex="-1" text="Stupid text for Test" display-tooltip-when-elided="true" style="font-size: 38px; color: rgba(0, 0, 0, 255); align-items: stretch; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
