--- a/Assets/Quizzy/Quizzy_Icons_1.uxml
+++ b/Assets/Quizzy/Quizzy_Icons_1.uxml
@@ -2,21 +2,32 @@
     <ui:VisualElement name="MainContainer" style="flex-grow: 1; background-image: resource(&apos;img/background&apos;);">
         <ui:VisualElement name="UpperContainer" style="flex-basis: 20%; height: auto; flex-grow: 1; flex-direction: row; justify-content: space-between; align-items: center;">
             <ui:VisualElement name="SeparatorLeft" style="width: 25%; height: 10px; color: rgb(0, 0, 0); -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
-            <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgb(0, 0, 0); font-size: 120px; color: rgb(0, 0, 0);" />
+            <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgb(0, 0, 0); font-size: 100px; color: rgb(0, 0, 0); -unity-font-definition: resource(&apos;fonts/Bungee-Regular SDF&apos;); -unity-font-style: bold;" />
             <ui:VisualElement name="SeparatorRight" style="width: 25%; height: 10px; -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
         </ui:VisualElement>
-        <ui:VisualElement name="MiddleContainer" style="flex-basis: 15%; flex-grow: 1; flex-direction: row; justify-content: center;">
+        <ui:VisualElement name="MiddleContainer" style="flex-basis: 15%; flex-grow: 1; flex-direction: row; justify-content: center; -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgba(0, 208, 224, 0.18);">
             <ui:VisualElement style="flex-direction: column; align-items: center;">
-                <ui:Label tabindex="-1" text="Question 1" display-tooltip-when-elided="true" name="QuestionCounter" style="font-size: 80px; color: rgb(0, 0, 0); -unity-font-style: bold;" />
-                <ui:Label tabindex="-1" text="Your answer was correct" display-tooltip-when-elided="true" name="AnswerIndicator" style="font-size: 40px; color: rgb(0, 0, 0);" />
+                <ui:Label tabindex="-1" text="Question 1" display-tooltip-when-elided="true" name="QuestionCounter" style="font-size: 80px; color: rgb(0, 0, 0); -unity-font-style: bold; -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;);" />
+                <ui:Label tabindex="-1" text="Your answer was correct" display-tooltip-when-elided="true" name="AnswerIndicator" style="font-size: 40px; color: rgb(0, 164, 31); -unity-font-definition: resource(&apos;fonts/Bungee-Regular SDF&apos;); background-color: rgba(0, 0, 0, 0);" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="LowerContainer" style="flex-grow: 1; flex-direction: row; flex-basis: 65%;">
             <ui:VisualElement name="IconContainer" style="flex-basis: 100%; align-items: center; justify-content: center;">
                 <ui:VisualElement name="Scores" style="width: 70%;">
-                    <ui:Label tabindex="-1" text="Score 123" display-tooltip-when-elided="true" style="font-size: 30px; color: rgb(0, 0, 0); align-items: stretch;" />
+                    <ui:Label tabindex="-1" text="Score 123" display-tooltip-when-elided="true" style="font-size: 30px; color: rgb(0, 0, 0); align-items: stretch; -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;); -unity-font-style: bold;" />
                 </ui:VisualElement>
-                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91);" />
+                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91);">
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 56px; left: 488px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 216px; left: 428px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 180px; left: 240px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 52px; left: 288px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 360px; left: 264px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 372px; left: 488px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 64px; left: 148px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 376px; left: 44px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 232px; left: 116px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 96px; left: 32px;" />
+                </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="AnswerContainer" style="flex-basis: 100%; width: auto; height: auto; justify-content: center; align-items: center;">
                 <ui:VisualElement name="AnswerBoard" style="width: 70%; height: 70%; justify-content: flex-start; align-items: stretch;">
@@ -28,11 +39,11 @@
                         <ui:Button text="NEXT HINT" display-tooltip-when-elided="true" name="NextHintButton" style="border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); font-size: 25px; background-color: rgb(0, 0, 0); padding-left: 10px; padding-right: 10px; padding-top: 4px; padding-bottom: 4px; flex-grow: 0;" />
                     </ui:VisualElement>
                     <ui:VisualElement name="QuestionText" style="flex-basis: 30%; flex-grow: 1;">
-                        <ui:Label tabindex="-1" text="Stupid little Start Text" display-tooltip-when-elided="true" name="Hint" style="font-size: 40px; color: rgba(0, 0, 0, 255);" />
+                        <ui:Label tabindex="-1" text="Stupid little Start Text" display-tooltip-when-elided="true" name="Hint" style="font-size: 40px; color: rgb(0, 0, 0); -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;); -unity-font-style: bold;" />
                     </ui:VisualElement>
-                    <ui:VisualElement name="DropContainer" style="flex-basis: 50%; align-items: center; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgba(0, 0, 0, 255); border-right-color: rgba(0, 0, 0, 255); border-top-color: rgba(0, 0, 0, 255); border-bottom-color: rgba(0, 0, 0, 255);">
-                        <ui:VisualElement style="width: 35%; height: 60%; color: rgba(221, 0, 0, 255); background-color: rgba(226, 0, 0, 255); border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
-                        <ui:Label tabindex="-1" text="Stupid text for Test" display-tooltip-when-elided="true" style="font-size: 38px; color: rgba(0, 0, 0, 255); align-items: stretch; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
+                    <ui:VisualElement name="DropContainer" style="flex-basis: 50%; align-items: center; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
+                        <ui:VisualElement style="width: 35%; height: 60%; color: rgb(221, 0, 0); background-color: rgb(226, 0, 0); border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
+                        <ui:Label tabindex="-1" text="Drag your answer here" display-tooltip-when-elided="true" style="font-size: 38px; color: rgb(0, 0, 0); align-items: stretch; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
