--- a/Assets/Quizzy/Quizzy_Icons_1.uxml
+++ b/Assets/Quizzy/Quizzy_Icons_1.uxml
@@ -17,7 +17,6 @@
                     <ui:Label tabindex="-1" text="Score 123" display-tooltip-when-elided="true" style="font-size: 30px; color: rgb(0, 0, 0); align-items: stretch; -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;); -unity-font-style: bold;" />
                 </ui:VisualElement>
                 <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91);">
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 56px; left: 488px;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 216px; left: 428px;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 180px; left: 240px;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 52px; left: 288px;" />
@@ -42,11 +41,14 @@
                         <ui:Label tabindex="-1" text="Stupid little Start Text" display-tooltip-when-elided="true" name="Hint" style="font-size: 40px; color: rgb(0, 0, 0); -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;); -unity-font-style: bold;" />
                     </ui:VisualElement>
                     <ui:VisualElement name="DropContainer" style="flex-basis: 50%; align-items: center; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
-                        <ui:VisualElement style="width: 35%; height: 60%; color: rgb(221, 0, 0); background-color: rgb(226, 0, 0); border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
+                        <ui:VisualElement style="width: 35%; height: 60%; color: rgb(221, 0, 0); background-color: rgb(226, 0, 0); border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;">
+                            <ui:VisualElement name="TestIcon" style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: -204px; left: -708px;" />
+                        </ui:VisualElement>
                         <ui:Label tabindex="-1" text="Drag your answer here" display-tooltip-when-elided="true" style="font-size: 38px; color: rgb(0, 0, 0); align-items: stretch; margin-left: 25px; margin-right: 25px; margin-top: 25px; margin-bottom: 25px;" />
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
+    <ui:VisualElement name="DragArea" style="position: absolute; flex-grow: 1; display: none;" />
 </ui:UXML>
