--- a/Assets/Quizzy/Quizzy_Icons_1.uxml
+++ b/Assets/Quizzy/Quizzy_Icons_1.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="MainContainer" style="flex-grow: 1; background-image: resource(&apos;img/background&apos;);">
+    <ui:VisualElement name="MainContainer" style="flex-grow: 1; background-image: resource(&apos;img/background&apos;); background-color: rgba(0, 0, 0, 255);">
         <ui:VisualElement name="UpperContainer" style="flex-basis: 20%; height: auto; flex-grow: 1; flex-direction: row; justify-content: space-between; align-items: center;">
             <ui:VisualElement name="SeparatorLeft" style="width: 25%; height: 10px; color: rgb(0, 0, 0); -unity-background-image-tint-color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
             <ui:Label tabindex="-1" text="Quizzy Icons" display-tooltip-when-elided="true" style="-unity-background-image-tint-color: rgb(0, 0, 0); font-size: 100px; color: rgb(0, 0, 0); -unity-font-definition: resource(&apos;fonts/Bungee-Regular SDF&apos;); -unity-font-style: bold;" />
@@ -16,16 +16,16 @@
                 <ui:VisualElement name="Scores" style="width: 70%;">
                     <ui:Label tabindex="-1" text="Score 123" display-tooltip-when-elided="true" style="font-size: 30px; color: rgb(0, 0, 0); align-items: stretch; -unity-font-definition: resource(&apos;fonts/AlumniSansPinstripe-Regular SDF&apos;); -unity-font-style: bold;" />
                 </ui:VisualElement>
-                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91);">
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 216px; left: 428px;" />
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 180px; left: 240px;" />
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 52px; left: 288px;" />
+                <ui:VisualElement name="IconBoard" style="width: 70%; height: 70%; border-left-width: 20px; border-right-width: 20px; border-top-width: 20px; border-bottom-width: 20px; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-left-color: rgb(99, 91, 91); border-right-color: rgb(99, 91, 91); border-top-color: rgb(99, 91, 91); border-bottom-color: rgb(99, 91, 91); flex-grow: 0; position: relative;">
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 216px; left: 428px; flex-grow: 1;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 180px; left: 240px; flex-grow: 1;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 52px; left: 288px; flex-grow: 1;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 360px; left: 264px;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 372px; left: 488px;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 64px; left: 148px;" />
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 376px; left: 44px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 32px; left: 60px; flex-grow: 1;" />
                     <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 232px; left: 116px;" />
-                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 96px; left: 32px;" />
+                    <ui:VisualElement style="width: 64px; height: 64px; background-image: resource(&apos;img/arc&apos;); position: absolute; top: 96px; left: 32px; flex-grow: 1;" />
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="AnswerContainer" style="flex-basis: 100%; width: auto; height: auto; justify-content: center; align-items: center;">
